--- a/stylesheets/admin_style.css
+++ b/stylesheets/admin_style.css
@@ -5,51 +5,19 @@ body{
     background: rgba(159, 166, 180, 0.22);
 }
 
-#sidebar{
-    width: 200px;
-    background: rgba(156, 188, 193, 0.31);
-    height: 100%;
-    text-align: right;
-    font-family: SourceSansPro_Regular;
-    color: #4a4a5d;
-    position: fixed;
-    box-shadow: 0 0 10px #888888;
-
-}
 #pages_title{
      padding: 10px;
 }
 
-.buttons{
-    width: 120px;
-    height: 30px;
-    border-radius: 15px;
-    color: #5e5f8b;
-    margin-right: 10px;
-    padding: 5px;
-    border: 1px solid #5e5f8b;
-    /*border: 1px solid;*/
-    background: rgb(242,246,248); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(242,246,248,1) 0%, rgba(216,225,231,1) 24%, rgba(181,198,208,1) 51%, rgba(201,212,221,1) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(242,246,248,1)), color-stop(24%,rgba(216,225,231,1)), color-stop(51%,rgba(181,198,208,1)), color-stop(100%,rgba(201,212,221,1))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  rgba(242,246,248,1) 0%,rgba(216,225,231,1) 24%,rgba(181,198,208,1) 51%,rgba(201,212,221,1) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  rgba(242,246,248,1) 0%,rgba(216,225,231,1) 24%,rgba(181,198,208,1) 51%,rgba(201,212,221,1) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  rgba(242,246,248,1) 0%,rgba(216,225,231,1) 24%,rgba(181,198,208,1) 51%,rgba(201,212,221,1) 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  rgba(242,246,248,1) 0%,rgba(216,225,231,1) 24%,rgba(181,198,208,1) 51%,rgba(201,212,221,1) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', endColorstr='#c9d4dd',GradientType=0 ); /* IE6-9 */
-    box-shadow: inset 0 0 5px 0 rgb(74, 74, 93);
-}
 
 #content{
     width: auto;
     height: auto;
-    /*box-sizing: border-box;*/
     position: absolute;
-    top: 0px;
     left: 200px;
     padding-left: 30px;
-    font-family: SourceSansPro_Regular;
     padding-bottom: 150px ;
+    top: 50px;
 }
 .sub_form{
     margin-left: 50px;
@@ -62,15 +30,6 @@ body{
     width: 500px;
     float: left;
 }
-#some_text{
-    font-size: 100px;
-    background-color: #565656;
-    color: transparent;
-    text-shadow: 0px 2px 3px rgba(255,255,255,0.5);
-    -webkit-background-clip:text;
-    -moz-background-clip: text;
-    background-clip:text;
-}
 
 #saving_text{
     position: absolute;
@@ -81,17 +40,94 @@ body{
 }
 
 #wrapper {
-    width: 950px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0;
-    background-color: #FFF;
+    height: 50px;
+    width: 100%;
+    position: fixed;
+    z-index: 6;
+    background: rgb(211,222,230);
+    padding-left: 200px;
+    color: #4a4a5d;
+    box-shadow: 0 0 10px #888888;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
-#welcome_msg {
-    float: left;
-    padding: 0;
-    margin: 10px 0px 0px 15px;
-    color: #F4FC02;
-    font-size: 14px;
+
+#container{
+    width: 100%;
+    height: 100%;
+    font-family: SourceSansPro_Regular;
+    color: #4a4a5d;
 }
+ #main{
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     top: 0;
+     padding-left: 200px;
+     -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+     box-sizing: border-box;
+ }
+
+#sidebar{
+    width: 200px;
+    height: 100%;
+    text-align: right;
+    background: rgb(211, 222, 230);
+    box-shadow: 0 0 10px #888888;
+    position: fixed;
+    z-index: 4;
+    margin-top: 50px;
+    top: 0;
+    left: 0;
+    padding-top: 10px;
+}
+#gap{
+    top:0;
+    left: 0;
+    width: 200px;
+    height: 60px;
+    background: rgb(211, 222, 230);
+    z-index: 10;
+    position: fixed;
+}
+.page_btn{
+    border-bottom-left-radius: 15px;
+    border-top-left-radius: 15px;
+    width: 180px;
+    height: 30px;
+    border-top: 1px solid #5e5f8b;
+    border-bottom: 1px solid #5e5f8b;
+    border-left: 1px solid #5e5f8b;
+    background: rgb(242,246,248);
+    background: -moz-linear-gradient(top,  rgba(242,246,248,1) 0%, rgba(216,225,231,1) 24%, rgba(181,198,208,1) 51%, rgba(201,212,221,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(242,246,248,1)), color-stop(24%,rgba(216,225,231,1)), color-stop(51%,rgba(181,198,208,1)), color-stop(100%,rgba(201,212,221,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(242,246,248,1) 0%,rgba(216,225,231,1) 24%,rgba(181,198,208,1) 51%,rgba(201,212,221,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(242,246,248,1) 0%,rgba(216,225,231,1) 24%,rgba(181,198,208,1) 51%,rgba(201,212,221,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(242,246,248,1) 0%,rgba(216,225,231,1) 24%,rgba(181,198,208,1) 51%,rgba(201,212,221,1) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(242,246,248,1) 0%,rgba(216,225,231,1) 24%,rgba(181,198,208,1) 51%,rgba(201,212,221,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', endColorstr='#c9d4dd',GradientType=0 ); /* IE6-9 */
+    box-shadow: inset 0 0 5px 0 rgb(74, 74, 93);
+}
+.buttons{
+    width: 130px;
+    height: 30px;
+    border-radius: 15px;
+    margin: 5px ;
+    color: #dae5ed;
+    border: 1px solid #000d2d;
+    background: rgb(80,87,104);
+    background: -moz-linear-gradient(top,  rgba(80,87,104,1) 0%, rgba(13,37,79,1) 45%, rgba(13,37,79,1) 66%, rgba(61,73,102,1) 99%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(80,87,104,1)), color-stop(45%,rgba(13,37,79,1)), color-stop(66%,rgba(13,37,79,1)), color-stop(99%,rgba(61,73,102,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(80,87,104,1) 0%,rgba(13,37,79,1) 45%,rgba(13,37,79,1) 66%,rgba(61,73,102,1) 99%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(80,87,104,1) 0%,rgba(13,37,79,1) 45%,rgba(13,37,79,1) 66%,rgba(61,73,102,1) 99%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(80,87,104,1) 0%,rgba(13,37,79,1) 45%,rgba(13,37,79,1) 66%,rgba(61,73,102,1) 99%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(80,87,104,1) 0%,rgba(13,37,79,1) 45%,rgba(13,37,79,1) 66%,rgba(61,73,102,1) 99%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#505768', endColorstr='#3d4966',GradientType=0 ); /* IE6-9 */
+}
+#pages{
+    margin-bottom: 10px ;
+}
+
 
