--- a/stylesheets/admin_style.css
+++ b/stylesheets/admin_style.css
@@ -21,9 +21,11 @@ body{
 }
 .sub_form{
     margin-left: 50px;
+
 }
 .sub_sub_form{
     margin-left: 50px;
+
 }
 .form_part{
     display: inline-block;
@@ -32,9 +34,11 @@ body{
 }
 
 #saving_text{
-    position: absolute;
-    top: 50px;
-    left: 50px;
+    position: fixed;
+    top: 100px;
+    right: 50px;
+    width: 100px;
+    height: 30px;
     background: red;
     color: black;
 }
@@ -128,6 +132,68 @@ body{
 }
 #pages{
     margin-bottom: 10px ;
+}
+#settings_content {
+    padding: 20px;
+    border: 1px solid #283c58;
+    width: 1000px;
+    /*-webkit-box-sizing: border-box;*/
+    /*-moz-box-sizing: border-box;*/
+    /*box-sizing: border-box;*/
+}
+#admin_content{
+    padding: 20px;
+    border: 1px solid #283c58;
+    width: 1000px;
+    /*-webkit-box-sizing: border-box;*/
+    /*-moz-box-sizing: border-box;*/
+    /*box-sizing: border-box;*/
+}
+#view_picker{
+    margin-top: 20px;
+    width: 100%;
+    height: 40px;
+    background: #283c58;
+    padding-left: 30px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    box-shadow: 0 0 10px #888888;
+
+}
+#admin_view{
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+#settings_view{
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+.view{
+    width: 150px;
+    height: 30px;
+    margin: 0;
+    float: left;
+    margin-top: 5px;
+    border: 1px solid rgba(84, 85, 126, 0.85);
+    background: rgb(242,246,248);
+    background: -moz-linear-gradient(top,  rgba(242,246,248,1) 0%, rgba(216,225,231,1) 24%, rgba(181,198,208,1) 51%, rgba(201,212,221,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(242,246,248,1)), color-stop(24%,rgba(216,225,231,1)), color-stop(51%,rgba(181,198,208,1)), color-stop(100%,rgba(201,212,221,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(242,246,248,1) 0%,rgba(216,225,231,1) 24%,rgba(181,198,208,1) 51%,rgba(201,212,221,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(242,246,248,1) 0%,rgba(216,225,231,1) 24%,rgba(181,198,208,1) 51%,rgba(201,212,221,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(242,246,248,1) 0%,rgba(216,225,231,1) 24%,rgba(181,198,208,1) 51%,rgba(201,212,221,1) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(242,246,248,1) 0%,rgba(216,225,231,1) 24%,rgba(181,198,208,1) 51%,rgba(201,212,221,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', endColorstr='#c9d4dd',GradientType=0 ); /* IE6-9 */
+    box-shadow: inset 0 0 5px 0 rgb(74, 74, 93);
+}
+#trash{
+    position: absolute;
+    right: 20px;
+    margin-top: 5px;
+    float: left;
+    cursor: pointer;
 }
 
 
